# CheckMates

./: .gitignore  .gitignore.swp  .travis.yml  CMakeList.txt  README.md  ci-install-linux.sh
build-client-Desktop-Debug/: CMakeCache.txt  CheckMates.cbp  Makefile  cmake_install.cmake
build-client-Desktop-Debug/.cmake/api/v1/reply/: cache-v2-5b726573cee6c7cd5403.json  cmakeFiles-v1-df10dabb39372e87a739.json  codemodel-v2-932cbeb33e8138841a43.json  index-2021-04-15T07-57-48-0130.json  target-client-Debug-c3129198ef78545c976c.json  target-client_autogen-Debug-39ea6a91f17a36862d76.json
build-client-Desktop-Debug/client_autogen/: moc_predefs.h
build-client-Desktop-Debug/client_autogen/6YEA5652QU/: moc_chessboard.cpp  moc_mainwindow.cpp
build-server-Desktop_Qt_5_12_5_GCC_64bit-Debug/: CMakeCache.txt
client/: .gitignore  .gitignore.swo  CMakeLists.txt  CTestTestfile.cmake  GMockConfig.cmake  README.md  client.cbp  cmake_install.cmake  database.db3  database.db3.sqbpro  database.h  graphics.h  main.cpp  main2.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  qml.qrc  qtChess.pro
client/client_tests/: client_tests.pro  gtest_dependency.pri  tst_test.h
client/include/: cell.h  chessboard.h  community.h  database.h  echoclient.h  echoserver.h  figures.h  gameobjects.cpp  gameobjects.h  gamewindowswork.h  global.h  graphics.h  mainmenu.h  mainwindow.h  serverconnection.h  testWSClient.h  tests.h  wsclient.h
client/include/windows/: authorizerwindow.h  chatwindow.h  gamewindow.h  mainwindow.h  menuwindow.h  settingswindow.h
client/my_tests/: main.cpp  tests.cpp
client/qml/: Cell.qml  CellsModel.qml  Chessboard.qml  GraphicsGame.qml  GraphicsGameForm.ui.qml  main.qml
client/server_connect/: BoostExampleClient.cpp
client/src/: WSClient.cpp  cell.cpp  chessboard.cpp  community.cpp  database.cpp  echoclient.cpp  echoserver.cpp  figures.cpp  gameobjects.cpp  gamewindowswork.cpp  graphics.cpp  main.cpp  mainwindow.cpp  serverconnection.cpp  wsclient.cpp
client/src/windows/: authorizerwindow.cpp  chatwindow.cpp  gamewindow.cpp  mainwindow.cpp  menuwindow.cpp  settingswindow.cpp
client/tests/: .gitignore  CMakeLists.txt  main.cpp  reAuthorizer.h  reChatMenu.h  reChessboard.h  reCommunity.h  reDatabase.h  reGame.h  reGraphics.h  reMenu.h  reSettings.h  tests.h  tst_chessboard.cpp  tst_community.cpp  tst_database.cpp  tst_graphics_main.cpp  tst_test.cpp
client/tests/build_test/: CMakeCache.txt  Makefile  cmake_install.cmake
client/ui/: mainwindow.ui
community/: CMakeLists.txt
community/source/: main.cpp
libs/: ci-install-linux.sh
server/: .gitignore  CMakeLists.txt  README.md
server/SaberChessServer/: SaberChessServer.sln
server/SaberChessServer/SaberChessServer/: SaberChessServer.vcxproj  SaberChessServer.vcxproj.filters
server/SaberChessServer/SaberChessServer/Debug/: SaberChessServer.exe.recipe  vc142.idb
server/SaberChessServer/SaberChessServer/Debug/SaberChessServer.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  SaberChessServer.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
server/client_example/: BoostExampleClient.cpp  BoostExampleClientDenis.cpp  BoostExampleClientYoura.cpp  DoNotUseBoostExampleClientCookie.cpp  DoNotUseWSClient.cpp  FullClient.cpp  WS Client.cpp  WSClient.cpp
server/source/: Authorizer.h  BoostExampleClient.cpp  CMakeLists.txt  ChessBoard.cpp  ChessBoard.h  ChessBoard.h.autosave  ChessPiece.h  Chesspiece.cpp  Chesspiece.h  GameSession.cpp  GameSession.h  King.cpp  Logger.h  Net.cpp  Net.h  Player.cpp  Player.h  ServerDB.cpp  ServerDB.h  Stats.h  Stub.h  TurnControl.cpp  TurnControl.h  TurnHistory.h  User.cpp  User.h  bishop.h  community.cpp  community.h  main.cpp  matcher.cpp  matcher.h  net.cpp  net.h  rook.h  server.cpp  server.h  user.cpp  user.h
server/storage/: 1108_syms_pass.txt  getdata.txt  test.txt  test1.txt  test_cookie.php  users.txt
server/storage/http_logs/: 21-05-17-17_00_42.txt  пример хорошего ответа.txt
server/test/: CommunityMock.cpp  GameMock.cpp  NetMock.cpp  OnCallPlayer.h  OnCallTurn.h  ServerUnitTest.cpp  TestGameSession.cpp  TestPlayer.cpp  reAuthorizer.h  reChessPiece.h  reCommunity.h  reDB.h  reGameSession.h  reLogger.h  reMatcher.h  reNet.h  reOptions.h  rePlayer.h  reSerializer.h  reStats.h  reTurnControl.h  reUser.h  test1.cpp  test2.cpp  testCommunity.cpp  test_client.h  tests.cpp
server/test_client/: DoNotUseBoostExampleClient.cpp  DoNotUseWSClient.cpp  FullClient.cpp
server/tests/: test1.cpp  tests.cpp
sqlite/: database.db3
